# codemate

./: .gitignore  README.md  api_manager.py  cli.py  pyproject.toml
codemate/: ai.py  api_manager.py  cli.py  func.py  process.py
